force-app/main/default/objects/Notes__c/fields/clinical_Notes_type__c.field-meta.xml
<CustomField>
    <fullName>clinical_Notes_type__c</fullName>
    <label>Type Of Note</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Session Notes</fullName>
            </value>
            <value>
                <fullName>Family Session Notes</fullName>
            </value>
            <value>
                <fullName>Missed Individual Notes</fullName>
            </value>
            <value>
                <fullName>Missed Family Notes</fullName>
            </value>
            <value>
                <fullName>General Notes (AMA interventions, statements patients make, etc.)</fullName>
            </value>
            <value>
                <fullName>Collateral Notes</fullName>
            </value>
            <value>
                <fullName>Detox Daily Note</fullName>
            </value>
            <value>
                <fullName>Residential Daily Note</fullName>
            </value>
            <value>
                <fullName>PHP Weely Note</fullName>
            </value>
            <value>
                <fullName>Transfer Notes</fullName>
            </value>
            <value>
                <fullName>Patient needs assessments</fullName>
            </value>
            <value>
                <fullName>Discharge Planning Notes</fullName>
            </value>
            <value>
                <fullName>Aftercare Note</fullName>
            </value>
            <value>
                <fullName>AMA/ACA Progress Notes</fullName>
            </value>
            <value>
                <fullName>Family Contact Notes</fullName>
            </value>
            <value>
                <fullName>Financial Needs Progress Notes</fullName>
            </value>
            <value>
                <fullName>Group Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>