force-app/main/default/objects/Notes__c/fields/Dataset1__c.field-meta.xml
<CustomField>
    <fullName>Dataset1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset1</label>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Notes (Dataset1)</relationshipLabel>
    <relationshipName>Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>