force-app/main/default/objects/Notes__c/fields/Detox_Daily_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detox_Daily_Notes__c</fullName>
    <label>Detox Daily Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>