force-app/main/default/objects/Notes__c/fields/Dummy_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_1__c</fullName>
    <label>Dummy 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>