force-app/main/default/objects/Notes__c/fields/Dummy_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_2__c</fullName>
    <label>Dummy 2</label>
    <type>DateTime</type>
</CustomField>