force-app/main/default/objects/Notes__c/fields/Elixir_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Follow_up_Date__c</fullName>
    <label>Follow-up Date</label>
    <type>DateTime</type>
</CustomField>