force-app/main/default/objects/Notes__c/fields/Elixir_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Medical Coding Assistance</fullName>
            </value>
            <value>
                <fullName>Discuss with Payor</fullName>
            </value>
            <value>
                <fullName>Discuss with Patient</fullName>
            </value>
            <value>
                <fullName>Rebill</fullName>
            </value>
            <value>
                <fullName>Bill to Secondary</fullName>
            </value>
            <value>
                <fullName>Bill to Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>