force-app/main/default/objects/Notes__c/fields/ERA_Notes__c.field-meta.xml
<CustomField>
    <fullName>ERA_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERA Notes</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>