force-app/main/default/objects/Notes__c/fields/Event_subject__c.field-meta.xml
<CustomField>
    <fullName>Event_subject__c</fullName>
    <label>Event subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>