force-app/main/default/objects/Notes__c/fields/High_Engagement__c.field-meta.xml
<CustomField>
    <fullName>High_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Engagement</label>
    <type>Checkbox</type>
</CustomField>