force-app/main/default/objects/Notes__c/fields/Highly_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Highly_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highly Engaged</label>
    <type>Checkbox</type>
</CustomField>