force-app/main/default/objects/Notes__c/fields/Low_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Low_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Engagement</label>
    <type>Checkbox</type>
</CustomField>