force-app/main/default/objects/Notes__c/fields/Moderate_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Moderate_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moderate Engagement</label>
    <type>Checkbox</type>
</CustomField>