force-app/main/default/objects/Notes__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Individual Note (E)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>