force-app/main/default/objects/Notes__c/fields/Plan_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Hierarchy</label>
    <referenceTo>Plan_Hierarchy__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>