force-app/main/default/objects/Notes__c/fields/Plan_SubHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_SubHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan SubHierarchy</label>
    <referenceTo>Plan_SubHierarchy__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>