force-app/main/default/objects/Notes__c/fields/Related_Problem__c.field-meta.xml
<CustomField>
    <fullName>Related_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Problem</label>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Notes (Related Problem)</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>