force-app/main/default/objects/Notes__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>&apos;hello....&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>