force-app/main/default/objects/Notes__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor Notes</fullName>
            </value>
            <value>
                <fullName>Nursing Notes</fullName>
            </value>
            <value>
                <fullName>Clinician Notes</fullName>
            </value>
            <value>
                <fullName>Session Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>