force-app/main/default/objects/Notes__c/recordTypes/Case_Load_Notes.recordType-meta.xml
<RecordType>
    <fullName>Case_Load_Notes</fullName>
    <active>true</active>
    <label>Case Load Notes</label>
</RecordType>