force-app/main/default/objects/Notes__c/recordTypes/Case_Management_Notes.recordType-meta.xml
<RecordType>
    <fullName>Case_Management_Notes</fullName>
    <active>true</active>
    <label>Case Management Notes</label>
</RecordType>