force-app/main/default/objects/Notes__c/recordTypes/Clinical_Notes.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Notes</fullName>
    <active>true</active>
    <label>Clinical Notes</label>
</RecordType>