force-app/main/default/objects/Notes__c/recordTypes/DC_Transfer_Notes.recordType-meta.xml
<RecordType>
    <fullName>DC_Transfer_Notes</fullName>
    <active>true</active>
    <label>DC/Transfer Notes</label>
</RecordType>