force-app/main/default/objects/Notes__c/recordTypes/Doctors_Notes.recordType-meta.xml
<RecordType>
    <fullName>Doctors_Notes</fullName>
    <active>true</active>
    <label>Doctors Notes</label>
</RecordType>