force-app/main/default/objects/Notes__c/recordTypes/ElixirSuite_Claim_ERA.recordType-meta.xml
<RecordType>
    <fullName>ElixirSuite_Claim_ERA</fullName>
    <active>true</active>
    <label>Claim ERA</label>
</RecordType>