force-app/main/default/objects/Notes__c/recordTypes/Family_Session_Notes.recordType-meta.xml
<RecordType>
    <fullName>Family_Session_Notes</fullName>
    <active>true</active>
    <label>Family Session Notes</label>
</RecordType>