force-app/main/default/objects/Notes__c/recordTypes/Group_Notes.recordType-meta.xml
<RecordType>
    <fullName>Group_Notes</fullName>
    <active>true</active>
    <label>Group Notes</label>
</RecordType>