force-app/main/default/objects/Notes__c/recordTypes/Individual_Session_Notes.recordType-meta.xml
<RecordType>
    <fullName>Individual_Session_Notes</fullName>
    <active>true</active>
    <label>Session Notes</label>
</RecordType>