force-app/main/default/objects/Notes__c/recordTypes/Nursing_Notes.recordType-meta.xml
<RecordType>
    <fullName>Nursing_Notes</fullName>
    <active>true</active>
    <label>Nursing Notes</label>
</RecordType>