force-app/main/default/objects/Notes__c/recordTypes/Progress_Notes.recordType-meta.xml
<RecordType>
    <fullName>Progress_Notes</fullName>
    <active>true</active>
    <label>Progress Notes</label>
</RecordType>