force-app/main/default/objects/Notes__c/recordTypes/UR_Notes.recordType-meta.xml
<RecordType>
    <fullName>UR_Notes</fullName>
    <active>true</active>
    <label>UR Notes</label>
</RecordType>